# simrad_halo20_radar

./: .gitmodules  README.md
Docs/: marin_radar_config_msg.md
halo_radar/: CMakeLists.txt  package.xml
halo_radar/halo_radar/: radar_interface.py
halo_radar/scripts/: halo_radar_control_panel.py  halo_radar_visualize.py
halo_radar/src/halo_radar/: fix_angle_increments.cpp  fix_scan_times.cpp  halo_radar.cpp  halo_radar_data_cropper.cpp  halo_radar_merge_scan.cpp  halo_radar_node.cpp  halo_radar_structures.h  halo_radar_visualize.cpp
halo_radar_visualize/: .gitignore  package.xml  setup.cfg  setup.py
halo_radar_visualize/halo_radar_visualize/: halo_radar_control_panel.py  halo_radar_data_cropper.py  halo_radar_merge_scan.cpp  halo_radar_merge_scan.py  halo_radar_visualize.py  radar_interface.py
halo_radar_visualize/launch/: halo_radar_bringup.launch.py  halo_radar_bringup_container.launch.py  halo_radar_bringup_cpp.launch.py  halo_radar_components_container.launch.py  halo_radar_pointcloud_to_laser_scan.launch.py  halo_radar_rosbag_to_scan.launch.py  halo_rosbag_record.launch.py  halo_rviz_visualize.launch.py  rosbag_record.launch.py
halo_radar_visualize/rviz2/: visualize.rviz
src/halo_radar/: angular_speed_estimator.h
