<?xml version="1.0"?>
<package format="3">
  <name>halo_radar</name>
  <version>0.0.0</version>
  <description>Driver for the Halo series of marine radars</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>GPL</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>marine_radar_control_msgs</depend>
  <depend>marine_sensor_msgs</depend>
  <depend>rosbag2</depend>
  <depend>rclcpp</depend>


<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
