<?xml version="1.0"?>
<package format="3">
  <name>halo_radar_visualize</name>
  <version>0.0.0</version>
  <description>Visualize for the Halo series of marine radars</description>
  <maintainer email="chris.yang@jetseaai.com">chrisyang</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>marine_radar_control_msgs</depend>
  <depend>marine_sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-pyqt5</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
